# middleware/validation.js
@@ -27,6 +27,20 @@ const customerIdSchema = (req, res, next) => {
     next();
 };
 
+
+//validate employee GET-id
+const employeeIdSchema = (req, res, next) => {
+    const id = req.params.id;
+
+    // Check if the id is a valid ObjectId
+    if (!ObjectId.isValid(id)) {
+        return res.status(400).json({ error: 'Invalid employee id, please add a valid id' });
+    }
+
+    // If validation passes, call next() to proceed to the controller function
+    next();
+};
+
 // Define the schema
 const flooringSchema = Joi.object({
     Name: Joi.string().min(1).required(),
@@ -47,6 +61,21 @@ const customerSchema = Joi.object({
     email: Joi.string().min(1).required(),
     phoneNumber: Joi.number().min(1).required().strict()
 });
+
+
+
+// Define the employee schema
+const employeeSchema = Joi.object({
+    firstName: Joi.string().min(1).required(),
+    lastName: Joi.string().min(1).required(),
+    emp_id: Joi.number().min(1).required().strict(),
+    emp_email: Joi.string().min(1).required(),
+    emp_phone: Joi.number().min(1).required().strict(),
+    hire_date: Joi.number().min(1).required().strict(),
+    job_title: Joi.string().min(1).required(),
+    Department:Joi.string().min(1).required() 
+});
+
 
 // Validate POST-id
 const validateFlooringPost = (req, res, next) => {
@@ -75,4 +104,19 @@ const validateCustomerPost = (req, res, next) => {
 };
 
 
-module.exports = { flooringIdSchema, customerIdSchema, validateFlooringPost, validateCustomerPost };
+
+// Validate employee POST-id
+const validateEmployeePost = (req, res, next) => {
+    const { error } = employeeSchema.validate(req.body);
+
+    if (error) {
+        // There are errors. Render the form again with sanitized values/error messages.
+        res.status(400).json({ errors: error.details });
+    } else {
+        // Data from form is valid.
+        next();
+    }
+};
+
+
+module.exports = { flooringIdSchema, customerIdSchema, employeeIdSchema, validateFlooringPost, validateCustomerPost, validateEmployeePost };
