# routes/index.js
@@ -2,6 +2,7 @@ const express = require('express');
 const router = express.Router();
 const productRoutes = require("./products");
 const customerRoutes = require("./customer");
+const employeeRoutes = require("./employee");
 const swaggerUi = require('swagger-ui-express');
 // const swaggerDocument = require('./swagger.json');
 const swaggerDocument = require(`../swagger-output-${process.env.CURRENT_LANE}.json`);
@@ -11,6 +12,8 @@ const swaggerDocument = require(`../swagger-output-${process.env.CURRENT_LANE}.j
 router.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 router.use("/floorings", productRoutes);
 router.use("/customers", customerRoutes);
+router.use("/employees", employeeRoutes);
+
 
 
 
